# safe-view

./: .gitignore  PUBLISHING.md  README.md  pyproject.toml
src/safe_view/: __init__.py  main.py  quantization.py  safe_view.css
tests/: smoke_test.py  test_calculations.py  test_quantization.py
